p56. update model one-way data binding
html5 data-attribute

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
   <div class="templates">
     <div class="problem-view">
       <h3 class="title"></h3>
+      <p data-name="description">What is truth?</p>
+      <pre><code data-name="code">function problem() { return __; }</code></pre>
     </div>
   </div>
 </div>
