--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,15 @@
   <div class="templates">
     <div class="problem-view">
       <h3 class="title"></h3>
-      <p data-name="description">What is truth?</p>
-      <pre><code data-name="code">function problem() { return __; }</code></pre>
+      <p data-name="description"></p>
+      <pre><code data-name="code"></code></pre>
+      <form>
+        <textarea class="u-full-width answer"></textarea>
+        <div>
+          <button class="button-primary check-btn">Check Answer</button>
+          <p class="result"></p>
+        </div>
+      </form>
     </div>
   </div>
 </div>
