--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,51 @@
   <script src='/vendor.js'></script>
   <script src='/app.js'></script>
   <style type="text/css" media="all">
-    body { margin-top: 30px; }
+    body { margin-top: 60px; }
     .templates { display: none; }
+    .fixed-width-text { font-family: "Consolas","Courier New",monospace }
+    .no-select {
+      user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      -moz-user-select: none;
+    }
+    .nav-container {
+      padding-left: 40px;
+      background: #666;
+    }
+    .nav-container a { color: white; }
+    .fixed-top {
+      position: fixed;
+      top: 0px;
+      z-index: 1024;
+    }
+    .inline-list {
+      margin-bottom: 0px; /* Skeleton reset */
+    }
+    .inline-list li {
+      display: inline;
+      margin: 0 20px 0 0;
+    }
+    .hover-links a { text-decoration: none; }
+    .hover-links a:hover { text-decoration: underline; }
+    .navbar-padding {
+      padding-top: 7px;
+      display: inline-block;
+    }
+    .text-lg {
+      font-size: 32px;
+    }
   </style>
 </head>
 <body>
 <div class='markup'>
+  <div class='nav-container no-select fixed-top u-full-width'>
+    <ul class='inline-list hover-links nav-list six columns'>
+      <li><a class='text-lg' href="#">LearnJS</a></li>
+      <li><a href="#problem-1">Start</a></li>
+    </ul>
+  </div>
   <div class='view-container container'>
   </div>
   <div class="templates">
