p73. add custom event

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,9 @@
     <div class="correct-flash">
       <span>Correct!</span> <a>Next Problem</a>
     </div>
+    <li class="skip-btn">
+      <a>Skip This Problem</a>
+    </li>
   </div>
 </div>
 </body>
