p89. add google sign in button

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <meta name="google-signin-client_id" content="773774831413-cdphmivg85ab1n5p0pff8m55u7o6u7dn.apps.googleusercontent.com"/>
   <title>Learn JS!</title>
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css'>
   <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src='/vendor.js'></script>
   <script src='/app.js'></script>
   <style type="text/css" media="all">
@@ -45,6 +47,11 @@
     .text-lg {
       font-size: 32px;
     }
+
+    .navbar-padding {
+      padding-top: 7px;
+      display: inline-block;
+    }
   </style>
 </head>
 <body>
@@ -54,6 +61,11 @@
       <li><a class='text-lg' href="#">LearnJS</a></li>
       <li><a href="#problem-1">Start</a></li>
     </ul>
+    <div class="four columns">
+      <span class="navbar-padding u-pull-right">
+        <span class="g-signin2" data-onsuccess="googleSignIn"></span>
+      </span>
+    </div>
   </div>
   <div class='view-container container'>
   </div>
