p96 create profile page

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,10 @@
         </div>
       </form>
     </div>
+    <div class="profile-view">
+      <h3>Your Profile</h3>
+      <div class="email"></div>
+    </div>
     <div class="correct-flash">
       <span>Correct!</span> <a>Next Problem</a>
     </div>
